@@ -27,7 +27,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <usb>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>HP LaserJet 3200</model>
+      <description>Hewlett-Packard LaserJet 3200</description>
+      <commandset>PJL,MLC,PCL,PCLXL</commandset>
+    </usb>
+  </autodetect>
   <functionality>B</functionality>
   <driver>pxlmono</driver>
   <comments>
