@@ -1,3 +1,8 @@
+2006-12-05  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-LaserJet_3200.xml: Added IEEE 1284 information (RH
+	bug #214037).
+
 2006-11-29  Tim Waugh  <twaugh@redhat.com>
 
 	* printer/HP-LaserJet_1160.xml: Added IEEE 1284 information (RH
